# real-estate-quiz

./: .gitignore  .tool-versions  CLAUDE.md  README.md  index.html  knip.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite-plugin-dev-persist.ts  vite.config.ts
.github/workflows/: deploy.yml
pipeline/: .env.example  README.md  build_quiz.py  classify_to_tree.py  fill_answers.py  generate.py  generate_blanks.py  parse_exam.py  pyproject.toml  schemas.py
pipeline/input/: sample_realtor_2023.txt
public/data/: exams.json
scripts/: generate_blanks.py  generate_ox.py  seed_ox_quiz.py
src/: App.tsx  app.tsx  constants.ts  main.tsx
src/__tests__/: setup.ts
src/components/: ExamTimer.tsx  MobileLayout.tsx  TreeNodeForm.tsx  TreeNodeItem.tsx  TreeNodePicker.tsx  activity-heatmap.tsx  error-boundary.tsx  exam-timer.tsx  fetch-error-fallback.tsx  mobile-layout.tsx  question-edit-dialog.tsx  tree-node-form.tsx  tree-node-item.tsx  tree-node-picker.tsx
src/data/: exam-tree.ts
src/hooks/: useSwipe.ts
src/pages/: ClassifyPage.tsx  ContactPage.tsx  DashboardPage.tsx  FillBlankPage.tsx  HomePage.tsx  MockExamPage.tsx  MockExamResultPage.tsx  QuizPage.tsx  ResultPage.tsx  StudyModePage.tsx  SubjectPage.tsx  TreeSubjectListPage.tsx  TreeViewPage.tsx  classify-page.tsx  contact-page.tsx  dashboard-page.tsx  fill-blank-page.tsx  flashcard-editor-page.tsx  flashcard-page.tsx  home-page.tsx  mock-exam-page.tsx  mock-exam-result-page.tsx  ox-quiz-page.tsx  quiz-page.tsx  result-page.tsx  search-page.tsx  study-mode-page.tsx  subject-page.tsx  (+2 more)
(+143 files in other folders)
